fix: alignments and changing validation text

--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -198,3 +198,13 @@
     }
   }
 }
+.enrollment-title{
+  .ant-card-head-title {
+    display: inline-block;
+    flex: 1;
+    padding: 20px 45px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+}
