--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -71,8 +71,14 @@
 .mt-4 {
   margin-top: 4%;
 }
-.mtminus-4 {
+.mtminus-2 {
   margin-top: -2%;
+}
+.mtminus-8 {
+  margin-top: -8%;
+}
+.mtminus-10 {
+  margin-top: -10%;
 }
 .mt-6 {
   margin-top: 6%;
@@ -100,7 +106,9 @@
 .mb-15 {
   margin-bottom: 15px;
 }
-
+.mb-25 {
+  margin-bottom: 15px;
+}
 .mb-10 {
   margin-bottom: 10px;
 }
