--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -77,8 +77,17 @@
 .mtminus-8 {
   margin-top: -8%;
 }
-.mtminus-10 {
-  margin-top: -10%;
+.mtminus-5 {
+  margin-top: -5%;
+}
+.mtminus-6 {
+  margin-top: -6%;
+}
+.mtminus-7 {
+  margin-top: -7%;
+}
+.mtminus-60 {
+  margin-top: -60px;
 }
 .mt-6 {
   margin-top: 6%;
