--- a/assets/css/partials/_buttons.scss
+++ b/assets/css/partials/_buttons.scss
@@ -3,6 +3,12 @@
   border-radius: 22px;
 }
 
+.screening-btn{
+  .ant-btn{
+    width: 100%;
+  }
+}
+
 .ant-btn-primary {
   background-color: #2255c2;
   border-color: #2255c2;
