--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -57,7 +57,8 @@
   .ant-select-selection--single {
     border-radius: 18px;
     background-color: #f9f9f9;
-    padding: 15px;
+    padding-top: 15px;
+    padding-left: 25px;
     border: 0;
     font-size: 1rem;
     height: 55px;
