--- a/assets/css/partials/_tabs.scss
+++ b/assets/css/partials/_tabs.scss
@@ -16,7 +16,33 @@
     padding-bottom: 10px;
   }
 }
+.screening-tabs {
+  .ant-tabs-tab-active.ant-tabs-tab {
+    color: #3869d1;
+    background-color: #f2f5fb !important;
+    border: 0.1px solid #a3c9ff;
+    border-radius: 24px;
+    padding-left: 10%;
+ 
+  }
+  .ant-tabs-tab {
+    background-color: #f2f5fb !important;
+    // border: 0.1px solid #a3c9ff;
+    border-radius: 24px;
+  }
+  .ant-table-tbody td{
+    border-color: #1bb558;
+    border-bottom: 1px solid #1bb558 !important ;
+    &:first-child{
+      border-color: #1bb558;
+    }
+    &:last-child{
+      border-color: #1bb558;
+    }
+  }
 
+
+}
 .pills-tabs {
   .ant-tabs-card-bar .ant-tabs-nav-container {
     height: auto !important;
@@ -124,7 +150,6 @@
     }
   }
 }
-
 .large-tabs {
   .ant-layout {
     // text-align: center;
