--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -1,4 +1,3 @@
-
 .blockState {
   position: relative;
   &::before {
@@ -38,7 +37,7 @@
     right: 0;
     background-color: #e2e2e2;
   }
-  
+
   .ant-steps-item {
     padding: 5px 2px;
     border: 0;
@@ -83,10 +82,9 @@
     }
   }
 
-
   .step-col-large {
     display: inline-flex;
-    overflow:hidden;
+    overflow: hidden;
     position: relative;
     width: 100%;
     &::before {
@@ -103,7 +101,7 @@
   }
 
   .ant-steps-small .ant-steps-item-title {
-    font-size: 1.30em;
+    font-size: 1.3em;
     margin-top: 5px;
     // min-width: 150px;
     &::after {
@@ -142,7 +140,7 @@
 
   .ant-steps-item-content {
     margin-right: 5px;
-    .ant-steps-item-title {    
+    .ant-steps-item-title {
       height: 25px;
       margin-left: 5px;
       margin-right: 5px;
@@ -208,9 +206,9 @@
     margin-left: 10px;
     .ant-steps-item-content {
       margin-left: 5px;
-      
+
       &::before {
-        content: '';       
+        content: '';
         background-image: url(http://demoapi.qmaid.co/web/icons/alarm.png);
       }
     }
@@ -225,16 +223,16 @@
     .ant-steps-item-content {
       margin-left: 5%;
       font-weight: 400;
-      font-size: 1.80rem;
+      font-size: 1.8rem;
       .ant-steps-item-title {
         font-size: large;
         font-weight: 400;
         margin-left: 4%;
-      }      
+      }
       &::before {
-        margin-top: 1px;   
+        margin-top: 1px;
         width: 30px;
-        height: 30px;          
+        height: 30px;
         background-image: url(http://demoapi.qmaid.co/web/icons/alarm.png);
       }
     }
@@ -248,7 +246,7 @@
     min-width: 30%;
     .ant-steps-item-content {
       font-weight: 600;
-      font-size: 1.80rem;
+      font-size: 1.8rem;
       .ant-steps-item-title {
         font-size: large;
         font-weight: 400;
@@ -264,12 +262,12 @@
   }
 
   .ant-steps-item-active {
-    background-color: #d1f2dc;
+    background-color: #f2f5fb;
     .ant-steps-item-content {
       margin-left: 5px;
       &::before {
         margin-left: 15px;
-        background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle.svg);
+        background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle-active.svg);
       }
     }
   }
@@ -283,7 +281,7 @@
     .ant-steps-item-content {
       margin-left: 20px;
       font-weight: 400;
-      font-size: 1.80rem;
+      font-size: 1.8rem;
       .ant-steps-item-title {
         font-size: large;
         font-weight: 400;
@@ -291,10 +289,10 @@
         color: #000;
       }
       &::before {
-      margin-top: 2px;
-      width: 35px;
-      height: 35px;
-      background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle-active.svg);
+        margin-top: 2px;
+        width: 35px;
+        height: 35px;
+        background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle-active.svg);
       }
     }
   }
@@ -322,7 +320,7 @@
     margin-left: 10px;
     display: inline-block;
     height: 30px;
-    font-size: 0.50rem;
+    font-size: 0.5rem;
     // margin-top: 12px;
     // vertical-align: text-bottom;
   }
@@ -349,7 +347,7 @@
         font-size: large;
         font-weight: 400;
         margin-left: 4%;
-      }   
+      }
       & .ant-steps-item:last-child {
         padding-right: 25px;
         padding-left: 25px;
@@ -357,13 +355,11 @@
       }
       &::before {
         width: 35px;
-        height: 35px;          
+        height: 35px;
         background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg);
       }
     }
   }
-
-
 
   .ant-table-thead > tr > th,
   .ant-table-tbody > tr > td {
@@ -527,8 +523,8 @@
   }
 }
 .inbound-accept-tabs {
-  .ant-tabs-nav{ 
-    .ant-tabs-tab{
+  .ant-tabs-nav {
+    .ant-tabs-tab {
       padding-top: 15px;
       padding-bottom: 15px;
       font-size: 1rem;
@@ -536,8 +532,8 @@
       border-radius: 22px;
       background-color: #d1f2dc;
     }
-    .ant-tabs-tab-active{
-      &::after{
+    .ant-tabs-tab-active {
+      &::after {
         background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg);
       }
     }
