--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,6 +31,7 @@
 @import './components/inventory';
 @import './components/consumables';
 @import './components/support';
+@import './components/screening';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap');
 
@@ -67,50 +68,63 @@ a {
 .w-125 {
   width: 123%;
 }
-.border-space{
-  .table{
+.border-space {
+  .table {
     border-spacing: 0 1em;
   }
 }
-.square-table .ant-table-content {
-  table {
-    border-collapse: separate;
-    text-align: center;
-    vertical-align: middle;
-  }
-  table thead tr {
-    border-collapse: collapse;
-    border-style: hidden;
-  }
-  .ant-table-thead tr th {
-    border: unset;
-    padding: 15px;
-    font-weight: bold;
-    text-align: center;
-
-    // why repeating code ?? check the below line
-    &:first-child {
-      border-bottom-left-radius: 40px;
-      border-top-left-radius: 40px;
-    }
-    &:last-child {
-      border-bottom-right-radius: 40px;
-      border-top-right-radius: 40px;
-    }
+.square-table {
+  .ant-table-thead > tr > th,
+  .ant-table-tbody > tr > td {
+    padding: 13px 12px;
+    padding-bottom: 0%;
+    margin: 15px 18px 7px;
+    word-wrap: break-word;
   }
 
-  .ant-table-row td {
-    &:first-child {
-      border-bottom-left-radius: 40px;
-      border-top-left-radius: 40px;
+  .ant-table-content {
+    table {
+      border-collapse: separate;
+      text-align: center;
+      vertical-align: middle;
     }
-    &:last-child {
-      border-bottom-right-radius: 40px;
-      border-top-right-radius: 40px;
+
+    table thead tr {
+      border-collapse: collapse;
+      border-style: hidden;
+    }
+    .ant-table-thead tr th {
+      border: unset;
+      padding: 15px;
+      font-weight: bold;
+      text-align: center;
+      .ant-table table {
+        border-spacing: 0 3px;
+      }
+
+      // why repeating code ?? check the below line
+      &:first-child {
+        border-bottom-left-radius: 40px;
+        border-top-left-radius: 40px;
+      }
+      &:last-child {
+        border-bottom-right-radius: 40px;
+        border-top-right-radius: 40px;
+      }
+    }
+
+    .ant-table-row td {
+      &:first-child {
+        border-bottom-left-radius: 40px;
+        border-top-left-radius: 40px;
+      }
+      &:last-child {
+        border-bottom-right-radius: 40px;
+        border-top-right-radius: 40px;
+      }
     }
   }
 }
-
 .ant-form-vertical .ant-form-item {
   // padding-bottom: unset;
   // margin-bottom: unset;
@@ -148,15 +162,15 @@ a {
   margin-top: 20px;
   margin-left: -20px;
 }
-.container-div{
-  width:100%; 
+.container-div {
+  width: 100%;
   display: flex;
 }
-.container-steps-div{
-  width:95%; 
+.container-steps-div {
+  width: 95%;
   display: flex;
 }
-.container-drop-down-div{
+.container-drop-down-div {
   width: 5%;
   margin-right: 1%;
   margin-left: 1%;
@@ -183,7 +197,7 @@ a {
     margin-left: 12.5%;
   }
 }
-.vertical-line-standard-table{
+.vertical-line-standard-table {
   position: absolute;
   width: 20px;
   height: 0;
@@ -193,12 +207,14 @@ a {
   margin-left: -15px;
 }
 .ant-pagination {
-  .ant-pagination-item-link,.ant-pagination-disabled {
+  .ant-pagination-item-link,
+  .ant-pagination-disabled {
     background: #f0f3ff;
     zoom: 1.3;
   }
   .ant-pagination-item,
-  .ant-pagination-disabled .ant-pagination-item-link,.ant-pagination-disabled {
+  .ant-pagination-disabled .ant-pagination-item-link,
+  .ant-pagination-disabled {
     border-radius: 22px;
     zoom: 1.3;
   }
