--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -22,6 +22,9 @@
 .mr-30 {
   margin-right: 30px;
 }
+.mmr-90 {
+  margin-right: -90px;
+}
 .m-3 {
   margin: 3%;
 }
@@ -41,8 +44,14 @@
 .ml-15 {
   margin-left: 15px;
 }
+.mml-15 {
+  margin-left: -15px;
+}
 .ml-40 {
   margin-left: 40px;
+}
+.mml-40 {
+  margin-left: -40px;
 }
 .ml-30 {
   margin-left: 30px;
@@ -52,6 +61,9 @@
 }
 .ml-2 {
   margin-left: 2%;
+}
+.ml-4 {
+  margin-left: 4%;
 }
 .ml-110 {
   margin-left: 110px;
