--- a/assets/css/components/_header.scss
+++ b/assets/css/components/_header.scss
@@ -1,8 +1,9 @@
 header.ant-layout-header {
   background-color: white;
   height: auto;
-  padding-top: 15px;
-  line-height: 50px;
+  // padding-top: 15px;
+  padding: 15px 25px;
+  // line-height: 50px;
 
   .user-detail,
   .hospital-detail {
@@ -17,6 +18,7 @@ header.ant-layout-header {
   .hospital-detail {
     float: right;
     display: flex;
+    align-items: baseline;
     .ant-select-selection--single {
       background-color: #f9f9f9;
       font-weight: bold;
@@ -29,7 +31,10 @@ header.ant-layout-header {
     padding-left: 15px;
     padding-right: 15px;
     margin-right: 10px;
-    margin-bottom: 20px;
+    // line-height: normal;
+    display: flex;
+    align-items: center;
+    // margin-bottom: 20px;
     img {
       max-width: 100px;
       max-height: 24px;
@@ -51,6 +56,8 @@ header.ant-layout-header {
   }
 }
 .notifications-dropdown {
+  max-height: 500px;
+  overflow-y: scroll;
   .ant-dropdown-menu-item {
     padding: 0.25rem 1.5rem;
     width: 300px;
