--- a/assets/css/components/_home.scss
+++ b/assets/css/components/_home.scss
@@ -1,19 +1,22 @@
 .home-page,
 .admin-page {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin: 25px;
+  // padding-right: 15px;
+  // padding-left: 15px;
+  // margin: 25px;
 
   .title {
-    font-size: 	1.5625rem;
+    font-size: 1.5625rem;
+    padding-left: 15px;
+    margin-left: 10px;
   }
 
   .home-tab,
   .admin-tab {
     text-decoration: none;
     margin: 5% auto;
-    padding-top: 7%;
-    padding-bottom: 6%;
+    padding: 25px 12px;
+    // padding-top: 7%;
+    // padding-bottom: 6%;
     box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
     color: #909090;
     background-color: #fff;
@@ -37,10 +40,10 @@
       top: 0;
       bottom: 0;
       margin: auto;
-      font-size: 	1.5rem;
+      font-size: 1.5rem;
       font-weight: bold;
       position: relative;
-      left: 90%;
+      left: 95%;
     }
 
     &:hover {
@@ -67,7 +70,7 @@
       vertical-align: middle;
       margin-left: 10px;
       padding-left: 10px;
-      font-size: 	0.9375rem;
+      font-size: 0.9375rem;
     }
   }
 
@@ -125,18 +128,18 @@
     padding: 0.5rem;
   }
 
-  .red-div-size{
+  .red-div-size {
     margin-bottom: -20px;
-  .white-card {
-    text-decoration: none;
-    margin: 3% auto;
-    box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
-    color: #233151;
-    border-radius: 22px;
-    background-color: #fff;
-    padding: 0.5rem;
+    .white-card {
+      text-decoration: none;
+      margin: 3% auto;
+      box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
+      color: #233151;
+      border-radius: 22px;
+      background-color: #fff;
+      padding: 0.5rem;
+    }
   }
-}
   .search-dropdown {
     width: 100%;
   }
@@ -174,22 +177,29 @@
 }
 
 .treatment-statistic {
+  background: #3869d1 !important;
+  border-radius: 22px;
+  height: 120px;
+  width: 97%;
+  margin: auto;
   .home-stats-head {
-    height: 150px;
+    padding: 18px;
+    height: 120px;
     margin: 15px auto;
-    border-radius: 10px;
+    background-color: transparent !important;
     box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
     transition: transform 0.8s ease-in-out, background-color 0.3s ease-in-out,
-    color 0.3s ease-in-out, background-image 0.3s ease-in-out;
+      color 0.3s ease-in-out, background-image 0.3s ease-in-out;
     background-image: url('https://cgt-dev-ft.microsysx.com/assets/media/bg/bg-hover-blue.svg');
     background-size: cover;
   }
   .stats {
     color: #233151;
     text-decoration: none;
-    margin-top: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 0;
+    // margin-top: 10px;
+    // margin-left: 20px;
+    // margin-right: 20px;
     box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
     border-radius: 15px;
     .completed,
@@ -252,15 +262,15 @@
   .ant-select-selection__placeholder,
   .ant-select-search__field__placeholder {
     left: 10px;
-    color:black;
+    color: black;
   }
 }
-.administration-tab{
-  .home-page{
+.administration-tab {
+  .home-page {
     .home-tab,
     .admin-page,
-  .admin-tab{
-    margin:3% !important;
+    .admin-tab {
+      margin: 3% !important;
+    }
   }
-}
 }
