--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -104,7 +104,7 @@
   .ant-menu-item {
     font-size: 	0.875rem;
     height: auto;
-    padding: 0 30px;
+    padding: 0 20px;
     &:hover {
       color: $primary-color;
     }
@@ -119,7 +119,7 @@
     }
   }
   .menu-container {
-    padding: 10px 30px 10px 30px;
+    padding: 10px;
     border-radius: 22px;
     display: flex;
     img {
