--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,13 +39,25 @@ body {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
 }
-
+.container {
+  max-width: 1140px;
+  margin: auto;
+}
 .profile-grey-bg {
   background-color: #ececec;
   padding: 20px;
   border-radius: 35px;
 }
-
+.ant-select-focused .ant-select-selection,
+.ant-select-selection:focus,
+.ant-select-selection:active {
+  border: none !important;
+  box-shadow: none !important;
+}
+.ant-select-open .ant-select-selection {
+  border: none !important;
+  box-shadow: none !important;
+}
 .default-select {
   .ant-select-selection {
     margin-top: -8px;
@@ -144,15 +156,15 @@ a {
   margin-top: 20px;
   margin-left: -20px;
 }
-.container-div{
-  width:100%; 
+.container-div {
+  width: 100%;
   display: flex;
 }
-.container-steps-div{
-  width:95%; 
+.container-steps-div {
+  width: 95%;
   display: flex;
 }
-.container-drop-down-div{
+.container-drop-down-div {
   width: 5%;
   margin-right: 1%;
   margin-left: 1%;
@@ -179,7 +191,7 @@ a {
     margin-left: 12.5%;
   }
 }
-.vertical-line-standard-table{
+.vertical-line-standard-table {
   position: absolute;
   width: 20px;
   height: 0;
@@ -189,12 +201,14 @@ a {
   margin-left: -15px;
 }
 .ant-pagination {
-  .ant-pagination-item-link,.ant-pagination-disabled {
+  .ant-pagination-item-link,
+  .ant-pagination-disabled {
     background: #f0f3ff;
     zoom: 1.3;
   }
   .ant-pagination-item,
-  .ant-pagination-disabled .ant-pagination-item-link,.ant-pagination-disabled {
+  .ant-pagination-disabled .ant-pagination-item-link,
+  .ant-pagination-disabled {
     border-radius: 22px;
     zoom: 1.3;
   }
@@ -205,5 +219,21 @@ a {
     a {
       color: white;
     }
+  }
+}
+.home-page {
+  .home-tab {
+    width: 97% !important;
+  }
+}
+.org-title {
+  margin-left: 8px;
+  margin-right: 8px;
+
+  .login-logo-x {
+    line-height: 14px;
+    padding: 15px 10px;
+    border-radius: 22px;
+    background-color: #f9f9f9;
   }
 }
