--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -101,6 +101,9 @@
 .mtminus-60 {
   margin-top: -60px;
 }
+.mtminus-44 {
+  margin-top: -44px;
+}
 .mt-6 {
   margin-top: 6%;
 }
@@ -133,7 +136,9 @@
 .mb-10 {
   margin-bottom: 10px;
 }
-
+.mmb-35 {
+  margin-bottom: -35px;
+}
 .mb-11 {
   margin-bottom: -11px;
 }
