--- a/assets/css/components/_chat.scss
+++ b/assets/css/components/_chat.scss
@@ -49,7 +49,7 @@ $defaultHeight: calc(100vh - 100px);
       font-size: 1.25rem;
       color: #6c757d;
       font-weight: bold;
-      font-family: sans-serif;
+      // font-family: sans-serif;
     }
     .ant-list-item-meta-content {
       padding-top: 2%;
