fix: set ui of patient screen in progress

--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -129,7 +129,7 @@
     }
     &:hover {
       cursor: pointer;
-      color: $primary-color;
+      // color: $primary-color;
       img {
         color: rgb(29, 187, 100);
         fill: #3869d1;
