--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -101,7 +101,7 @@
   }
 
   .ant-steps-small .ant-steps-item-title {
-    font-size: 1.3em;
+    font-size: 12px !important;
     margin-top: 5px;
     // min-width: 150px;
     &::after {
