--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -151,7 +151,7 @@ a {
 }
 .page-header {
   margin-top: -1rem;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
 }
 .page-title {
   font-size: 1.5625rem;
