fix: patient listing btns

--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -1,6 +1,6 @@
 .enrollment-page {
   margin: 2% 2%;
-
+  padding: 26px !important;
   .ant-tabs .ant-tabs-left-content {
     border-left: unset;
   }
