--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -78,7 +78,7 @@
     display: inline-block;
     width: 100%;
     white-space: nowrap;
-    font-size: 	0.875rem;
+    font-size: 0.875rem;
     border-radius: 22px;
     max-width: 150px;
   }
@@ -92,7 +92,9 @@
 }
 .sidebar {
   overflow: hidden;
-
+  .side-menu {
+    margin-top: 5%;
+  }
   .logo-container {
     @extend .text-center;
     .logo {
@@ -102,7 +104,7 @@
   }
 
   .ant-menu-item {
-    font-size: 	0.875rem;
+    font-size: 0.875rem;
     height: auto;
     padding: 0 20px;
     &:hover {
