--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -178,14 +178,22 @@ a {
   width: 100%;
   display: flex;
 }
+.container-div.main {
+  display: block !important;
+  position: relative;
+  text-align: right;
+}
 .container-steps-div {
-  width: 95%;
+  width: 98%;
   display: flex;
+}
+.container-steps-div.main {
+  display: block !important;
 }
 .container-drop-down-div {
   width: 5%;
   margin-right: 1%;
-  margin-left: 1%;
+  margin-left: auto;
 }
 
 .specific {
