--- a/assets/css/partials/_buttons.scss
+++ b/assets/css/partials/_buttons.scss
@@ -10,8 +10,8 @@
 }
 
 .ant-btn-primary {
-  background-color: #2255c2;
-  border-color: #2255c2;
+  background-color: #3869d1;;
+  border-color: #3869d1;;
   &:hover {
     background-color: #1749b5;
     border-color: #1749b5;
