--- a/assets/css/partials/_tables.scss
+++ b/assets/css/partials/_tables.scss
@@ -15,6 +15,10 @@
 
   .ant-table-thead tr th {
     padding: 15px;
+    padding-left: 7px;
+    padding-right: 7px;
+    border-top: 2px solid #ebebeb !important;
+    border-bottom: 2px solid #ebebeb !important;
     font-weight: bold;
     text-align: center;
     &:first-child {
