--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -211,7 +211,6 @@
       input.ant-input:hover {
         border-color: transparent !important;
         box-shadow: none !important;
-
       }
       input.ant-input:focus {
         border-color: transparent !important;
@@ -247,5 +246,17 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+  }
+}
+.schedule-logistic-selection {
+  .ant-select-selection {
+    margin-bottom: 20px;
+    border-radius: 22px;
+    padding: 1px 1px 15px 5px;
+    border: none;
+    background-color: #f9f9f9;
+  }
+  .ant-form-item-control .ant-select-selection__placeholder {
+    margin-top: -15px;
   }
 }
