--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -38,6 +38,18 @@
     background-color: #e2e2e2;
   }
 
+  .ant-btn-drop-down {
+    margin-top: auto;
+  }
+
+  .container-steps-div {
+    min-width: 780px;
+    padding: 0;
+    margin-top: 0;
+    .rounded-table .ant-table-tbody td {
+      padding: 5px;
+    }
+  }
   .ant-steps-item {
     padding: 5px 2px;
     border: 0;
@@ -45,12 +57,12 @@
     color: #233151;
     border-radius: 22px;
     cursor: pointer;
-    padding-right: 5px;
-    margin: auto 8px;
+    padding-right: 2px;
+    margin: auto 0;
   }
 
   .ant-steps-item-wait {
-    margin-left: 15px;
+    // margin-left: 15px; why ?
     background-color: #f9f9f9;
   }
 
@@ -81,7 +93,7 @@
       background-color: #bebfcb;
     }
     .ant-steps-small.ant-steps-label-horizontal {
-      display: block !important;
+      // display: block !important;
     }
   }
 
@@ -370,11 +382,11 @@
     }
   }
 
-  .ant-table-thead > tr > th,
-  .ant-table-tbody > tr > td {
-    padding-top: 0;
-    border: 1px solid red;
-  }
+  // .ant-table-thead > tr > th,
+  // .ant-table-tbody > tr > td {
+  //   padding-top: 0;
+  //   border: 1px solid red;
+  // }
 }
 
 .view-screen {
