--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -68,7 +68,7 @@
 
 .logout-menu {
   position: absolute;
-  z-index: 999999999;
+  // z-index: 999999999;
   top: 50px;
   left: 30px;
   .menu-container {
@@ -197,4 +197,23 @@
 }
 .ant-layout.ant-layout-has-sider {
   height: 100vh;
+}
+.patient-page {
+  .ant-table-row.ant-table-row-level-0 {
+    td {
+      padding-top: 0 !important;
+      font-weight: bold;
+      .ant-row.ant-form-item {
+        margin: 5px 0;
+        padding: 8px;
+      }
+      .ant-form-item-children {
+        i.anticon.anticon-check {
+          color: green;
+          font-size: 18px;
+          font-weight: 900;
+        }
+      }
+    }
+  }
 }
