--- a/assets/css/partials/_buttons.scss
+++ b/assets/css/partials/_buttons.scss
@@ -1,38 +1,38 @@
 .ant-btn {
   height: 55px;
-  border-radius: 22px;
+  border-radius: 19px;
 }
 
-.screening-btn{
-  .ant-btn{
+.screening-btn {
+  .ant-btn {
     width: 100%;
   }
 }
 
 .ant-btn-primary {
-  background-color: #3869d1;;
-  border-color: #3869d1;;
+  background-color: #3869d1;
+  border-color: #3869d1;
   &:hover {
-    background-color: #1749b5;
-    border-color: #1749b5;
+    background-color: #0069d9;
+    border-color: #0062cc;
   }
   &:focus {
     background-color: #1749b5;
     border-color: #1749b5;
   }
 }
-.action-button{
+.action-button {
   background: #f1f1f1;
   border: 1px solid transparent;
   height: 40px;
 }
-.ant-btn-drop-down{
+.ant-btn-drop-down {
   margin-top: 15px;
   height: 25px;
   width: 70px;
   border-radius: 9px;
   padding-left: 10px;
 }
-.btn-color{
-  color:black
+.btn-color {
+  color: black;
 }
