--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -416,8 +416,13 @@
       color: #1bb559;
     }
   }
-  .step-bar {
+  .green-border {
     border: 1px solid #1bb559;
+  }
+  .grey-border {
+    border: 1px solid #e3e4e4;
+  }
+  .step-bar {
     padding: 10px;
     border-radius: $default-radius;
     margin-left: 10px;
