--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -199,19 +199,46 @@
   height: 100vh;
 }
 .patient-page {
-  .ant-table-row.ant-table-row-level-0 {
-    td {
-      padding-top: 0 !important;
-      font-weight: bold;
-      .ant-row.ant-form-item {
-        margin: 5px 0;
-        padding: 8px;
+  .treatment-process {
+    .collect-sample-data {
+      .ant-table-row.ant-table-row-level-0 {
+        td {
+          padding-top: 0 !important;
+          font-weight: bold;
+          .ant-row.ant-form-item {
+            margin: 5px 0;
+            padding: 8px;
+          }
+          .ant-form-item-children {
+            i.anticon.anticon-check {
+              color: green;
+              font-size: 18px;
+              font-weight: 900;
+            }
+          }
+        }
       }
-      .ant-form-item-children {
-        i.anticon.anticon-check {
-          color: green;
-          font-size: 18px;
-          font-weight: 900;
+      .ant-table-row {
+        // td {
+        //   border-top: 0;
+        //   border-right: 0 !important;
+        // }
+        .square-table .ant-table-content .ant-table-row td:last-child {
+          border-bottom-left-radius: 0 !important;
+          border-top-left-radius: 0 !important;
+          border-left: 0;
+          border-right: 0;
+        }
+        .ant-table-row-cell-break-word {
+          border-bottom-left-radius: 0 !important;
+          border-top-left-radius: 0 !important;
+          border-left: 0;
+          border-right: 0;
+        }
+      }
+      .ant-tabs {
+        .ant-tabs-tab {
+          border: none !important;
         }
       }
     }
