--- a/assets/css/partials/_tempFile.scss
+++ b/assets/css/partials/_tempFile.scss
@@ -9,10 +9,67 @@
 }
 // -------------
 .patient-page {
-  .ant-table-row {
+  .treatment-process {
     td {
       border-top: 0;
       border-right: 0 !important;
+    }
+    .ant-table-row.ant-table-row-level-0 {
+      td {
+        padding-top: 0 !important;
+        font-weight: bold;
+        .ant-row.ant-form-item {
+          margin: 5px 0;
+          padding: 8px;
+        }
+        .ant-form-item-children {
+          i.anticon.anticon-check {
+            color: green;
+            font-size: 18px;
+            font-weight: 900;
+          }
+        }
+      }
+    }
+    .ant-table-row {
+      // td {
+      //   border-top: 0;
+      //   border-right: 0 !important;
+      // }
+      .square-table .ant-table-content .ant-table-row td:last-child {
+        border-bottom-left-radius: 0 !important;
+        border-top-left-radius: 0 !important;
+        border-left: 0;
+        border-right: 0;
+      }
+      .ant-table-row-cell-break-word {
+        border-bottom-left-radius: 0 !important;
+        border-top-left-radius: 0 !important;
+        border-left: 0;
+        border-right: 0;
+      }
+    }
+    .ant-upload-list-item-name.ant-upload-list-item-name-icon-count-1 {
+      width: 130px;
+    }
+  }
+}
+.support.container {
+  .ant-card-head-title {
+    padding: 0;
+  }
+}
+.support.container:last-child {
+  padding-top: 0;
+}
+.view-screen {
+  .pills-tabs.no-shadow {
+    .ant-tabs-tab {
+      margin: 5px 22px 2px 5px !important;
+    }
+    .ant-tabs-tab:focus {
+      // background-color: transparent !important;
+      box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
     }
   }
 }
