--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -234,6 +234,20 @@
       }
     }
   }
+  .cancel {
+    .ant-steps-item {
+      background: #ff8361;
+    }
+    .ant-steps {
+      @extend .blockState;
+    }
+    .ant-steps-item-content {
+      &::before {
+        content: '';
+        background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg) !important;
+      }
+    }
+  }
 
   .ant-steps-item-finish {
     background: #d1f2dc;
