--- a/assets/css/components/_labels.scss
+++ b/assets/css/components/_labels.scss
@@ -1,8 +1,8 @@
-.sample-form-container{
+.sample-form-container {
   border: 1px solid #000;
   padding: 5px;
   color: #000;
-  .left{
+  .left {
     border-right: 1px solid black;
     padding: 0 5px;
   }
@@ -36,7 +36,7 @@
     font-size: 0.875rem;
   }
   .manufacturer-name {
-    font-size: 	0.9375rem;
+    font-size: 0.9375rem;
     margin-top: 5px;
     font-weight: bold;
     display: block;
@@ -55,10 +55,9 @@
       max-width: 50px;
     }
   }
-
 }
 
-.footer-btn-label{
+.footer-btn-label {
   height: auto;
   font-size: 1rem;
   padding: 0.2em 0.85rem;
@@ -78,11 +77,11 @@
   height: auto;
 }
 
-.blue{
+.blue {
   background-color: blue;
   color: #fff;
 }
-.gray{
+.gray {
   background-color: gray;
   color: #fff;
 }
@@ -91,5 +90,10 @@
   padding-right: 40px;
   .page-search-input {
     right: 0;
+  }
+  .ant-table-row {
+    td:first-child {
+      font-weight: 400 !important;
+    }
   }
 }
