--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -97,6 +97,9 @@
     .ant-steps-small.ant-steps-label-horizontal {
       // display: block !important;
     }
+    .ant-steps-item {
+      margin-right: 8px !important;
+    }
   }
 
   .step-col-large {
@@ -210,7 +213,6 @@
       }
     }
   }
-
 
   .ant-steps-item-finish {
     background: #d1f2dc;
