--- a/assets/css/components/_support.scss
+++ b/assets/css/components/_support.scss
@@ -69,8 +69,8 @@ $chatHeight: 255px;
           display: inline-block;
         }
       }
-      .message-receive {
-        justify-content: end;
+      .message-received {
+        // justify-content: end;
         .ant-comment {
           background-color: #f1faff;
           border-radius: 22px;
