--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -98,7 +98,7 @@
 
 .dated-time {
   background-color: $danger;
-  padding: 7% 20%;
+  padding: 7% 16%;
   border-radius: 22px;
   color: white;
   font-size: 1.75rem;
@@ -127,8 +127,19 @@
   display: flex;
 }
 .timebox {
+  margin-bottom: 10px;
   .ant-list-item {
-    padding: 3px 0;
+    padding: 10px 0;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  h4 {
+    margin: 0;
+    a {
+      font-weight: 600;
+      font-size: 13px;
+      color: #000;
+    }
   }
 }
 .page-footer {
@@ -167,4 +178,23 @@
 .notifications-dropdown {
   max-height: 80vh;
   overflow-y: scroll;
+}
+// ===============
+.manf-schedule {
+  td {
+    .ant-btn {
+      height: fit-content;
+      span {
+        padding: 12px 10px;
+      }
+    }
+  }
+  .rounded-table .ant-table-tbody {
+    td:first-child {
+      font-weight: 400;
+    }
+  }
+}
+.manf-schedule > .ant-card-body {
+  padding-top: 0;
 }
