--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -118,9 +118,9 @@
       left: 82px;
       background-color: #bebfcb;
     }
-    .ant-steps-small.ant-steps-label-horizontal {
-      // display: block !important;
-    }
+    // .ant-steps-small.ant-steps-label-horizontal {
+    // display: block !important;
+    // }
     .ant-steps-item {
       margin-right: 8px !important;
     }
